// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphEngine snapshot > renders deterministically across ticks 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9997368106456,
      399.7486727714537,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9989472437366,
      399.49734664535157,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9976313027364,
      399.2460227241329,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`GraphEngine snapshot > renders deterministically across ticks 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9997368106456,
      399.7486727714537,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9989472437366,
      399.49734664535157,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9976313027364,
      399.2460227241329,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`GraphEngine snapshot > renders deterministically across ticks 3`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.9996446945338,
      199.77380570101673,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9990130418147,
      199.62301060413782,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99806556619956,
      599.4722171609188,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9993683462419,
      599.6984079872109,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.9996446945338,
      199.77380570101673,
      671.9990130418147,
      199.62301060413782,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.9996446945338,
      199.77380570101673,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9990130418147,
      199.62301060413782,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.99806556619956,
      599.4722171609188,
      671.9993683462419,
      599.6984079872109,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99806556619956,
      599.4722171609188,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9993683462419,
      599.6984079872109,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99857878164187,
      199.54761363447977,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9960521943168,
      199.24603154363032,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99226236874364,
      598.9444626818644,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9974733960506,
      599.3968212661365,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.99857878164187,
      199.54761363447977,
      671.9960521943168,
      199.24603154363032,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99857878164187,
      199.54761363447977,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9960521943168,
      199.24603154363032,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.99226236874364,
      598.9444626818644,
      671.9974733960506,
      599.3968212661365,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.99226236874364,
      598.9444626818644,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9974733960506,
      599.3968212661365,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.9968022718444,
      199.3214260328136,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9911175386795,
      198.86907315354892,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.98259071946285,
      598.4167649213396,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9943151826748,
      599.0952451283986,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.9968022718444,
      199.3214260328136,
      671.9911175386795,
      198.86907315354892,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.9968022718444,
      199.3214260328136,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9911175386795,
      198.86907315354892,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      271.98259071946285,
      598.4167649213396,
      671.9943151826748,
      599.0952451283986,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.98259071946285,
      598.4167649213396,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9943151826748,
      599.0952451283986,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`GraphEngine snapshot > renders deterministically across ticks 4`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      271.9996446945338,
      199.77380570101673,
      271.99806556619956,
      599.4722171609188,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(51, 153, 255, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      271.9996446945338,
      199.77380570101673,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      271.99806556619956,
      599.4722171609188,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      329.1424116012882,
      199.75226354431967,
      329.1411088204913,
      599.5045301361034,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(80.14285714285714, 142.07142857142858, 244.07142857142858, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(80.14285714285714, 142.07142857142858, 244.07142857142858, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      329.1424116012882,
      199.75226354431967,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      329.1411088204913,
      599.5045301361034,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      386.2851785080426,
      199.7307213876227,
      386.2841520747831,
      599.5368431112879,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(109.28571428571429, 131.14285714285714, 233.14285714285714, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(109.28571428571429, 131.14285714285714, 233.14285714285714, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      386.2851785080426,
      199.7307213876227,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      386.2841520747831,
      599.5368431112879,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      443.427945414797,
      199.70917923092574,
      443.42719532907483,
      599.5691560864726,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(138.42857142857144, 120.21428571428571, 222.21428571428572, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(138.42857142857144, 120.21428571428571, 222.21428571428572, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      443.427945414797,
      199.70917923092574,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      443.42719532907483,
      599.5691560864726,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      500.5707123215514,
      199.6876370742287,
      500.5702385833666,
      599.6014690616572,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(167.57142857142858, 109.28571428571429, 211.28571428571428, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(167.57142857142858, 109.28571428571429, 211.28571428571428, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      500.5707123215514,
      199.6876370742287,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      500.5702385833666,
      599.6014690616572,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      557.7134792283059,
      199.66609491753184,
      557.7132818376584,
      599.6337820368417,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(196.71428571428575, 98.35714285714285, 200.35714285714286, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(196.71428571428575, 98.35714285714285, 200.35714285714286, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      557.7134792283059,
      199.66609491753184,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      557.7132818376584,
      599.6337820368417,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      614.8562461350602,
      199.64455276083476,
      614.8563250919501,
      599.6660950120264,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(225.85714285714286, 87.42857142857143, 189.42857142857144, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(225.85714285714286, 87.42857142857143, 189.42857142857144, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      614.8562461350602,
      199.64455276083476,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      614.8563250919501,
      599.6660950120264,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      671.9990130418147,
      199.62301060413782,
      671.9993683462419,
      599.6984079872109,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 76.5, 178.5, 0.7)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      671.9990130418147,
      199.62301060413782,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9993683462419,
      599.6984079872109,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;
